wp-content/themes/mozr-custom/style.css
/* ... */
.white{
  color:white;
}
.CDN-container, .security-container{
  background-color: #F7F6F5;
}
.footer-link{
  cursor: pointer;
}
.center-text{
  text-align: center;
}
.amazon-cloudfront{
  border: solid 1px lightgrey;
  padding: 60px 20px;
}
.container .margin-y-100{
  margin: 100px 0px;
}
.margin-bottom-100{
  margin-bottom: 100px;
}
.mozr-template-icon{
  width: 15%;
}
.container .margin-top-150{
  margin-top: 150px;
}

.container .margin-y-50{
  margin: 50px 0px;
}

.margin-bottom-50{
  margin-bottom: 50px;
}

#page{
  margin: 0px !important;
}

body:before{
  height: 0px !important;
}

#masthead{
      padding: 0px 15px;
}

.links-post a{
  font-size: 13px;
  font-family: 'Open Sans', sans-serif;
  color: black;
}

.codestyle li {		
 list-style-type: decimal !important;		
}		

.codestyle ol {		
  padding-left: 2em;		
}
  

#tldr{
    font-family: 'Open Sans', sans-serif;
    font-size: 13px;
    background-color: #F1F1F2;
    padding: 30px 40px;
}

.select-category{
  float: right;
  width: 180px;
  height: 40px;
  border-radius: 0px !important;
  background: no-repeat;
  font-family: 'Open Sans', sans-serif;
  background-color: #F1F1F2;
  border: none;
  font-size: 12px;
  -webkit-appearance: none;
  padding-left: 10px;
  position: relative;
  top: -10px;

  background-image: url('../../../download.svg');
  background-size: 16px 7px;
  background-position: right 5px center;
  -webkit-background-origin: content-box;
  background-origin: content-box;
  background-repeat: no-repeat;
  background-position-y: 15px;
}

.select-category:focus{
  outline: none;
}


.site-header-menu{
      margin-top: 5px;
    margin-bottom: 5px;
}

.site-branding{
      margin-top: 15px;
    margin-bottom: 15px;
}

#menu-main li{
  font-size: 13px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
}

body{
  background: white !important;
}


.main-navigation a:hover, .main-navigation a:focus {
    color: #a5a5a5 !important;
}

.title{
  text-align: center;
    border-bottom: 1px solid #d0d2d3;
    
}

.title h1{
  margin: 15px 0px;
}

body h1{
  font-family: 'Montserrat', sans-serif;
}

.current_page_item a{
  font-weight: normal !important;
  color: #a5a5a5;
}

body::after{
  height: 0px !important;
}

.site-footer{
    padding: 15px 15px;
}

.footer-container{
  background-color: #231F20;
}
.post-container{
  -webkit-box-shadow: 0px 6px 26px -4px rgba(82,82,82,1);
  -moz-box-shadow: 0px 6px 26px -4px rgba(82,82,82,1);
  box-shadow: 0px 6px 26px -4px rgba(82,82,82,1);
}
footer{
  width: 100%;
}

.site-title a{
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: white;

    font-size: 11px;
}

span.site-title::after{
  display: none !important;
}

.footer-column-title{
  font-size: 14px;
    font-family: 'Montserrat', sans-serif;
}

table, tr, td {
  border: none !important;
}

td .social{
  font-size: 20px;
  color: #F75737;
}

td .circle{
  border: 2px solid #F75737;
  border-radius: 20px;
  width: 40px;
  height: 40px;
  text-align: center;
  padding-top: 8px;
}

td{
  display: inline-block;
}

.footer-column-element{
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
    height: 12px;
}

.footer.container{
      margin-bottom: 50px;
}

.gray-line{
    height: 1px;
    background-color: #D0D2D3;
    margin-bottom: 60px;
    margin-left: 0px;
    margin-right: 0px;
}
.page-template-mozr_blog .post-container{
  margin-bottom: 20px;
}
.post-container h2{
    font-family: 'Montserrat', sans-serif;
}

.post-container a{
  color: black;
}

.blog-content{
    border: 1px solid #D0D2D3;
    border-top: none;
    padding: 25px;
    background-color: white;
}

.post-description{
  font-family: 'Open Sans', sans-serif;
  font-size: 13px;
  margin-top: 30px;
  height: 125px;
}

.post-date{
  color: #757575;
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
  margin-bottom: 8px;
}

#main-content{
    margin-top: 40px;
    margin-bottom: 40px;
    padding: 0px;
}

.post-author{
      float: right;
    font-family: 'Open Sans', sans-serif;
    color: #757575 !important;
    font-size: 12px;
}


.post-category{
  width: 150px;
  position: absolute;
  background-color: white;
  text-align: center;
  padding: 10px 5px;
  color: #F75737;
  font-family: 'Open Sans', sans-serif;
  font-size: 13px;
}

.post-category a{
  color: #F75737;
}

.read-this{
  height: 30px;
  border: 1px solid black;
  padding: 10px 20px;
  width: 100px;
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  background-color: white;
  font-size: 11px;
  display: initial;
}
body, button, input, select, textarea{
  font-size: 14px;
}
.post-cont {
  font-size: 21px;
}
.entry-header
{
  margin: 0 !important;
  margin-top: 20px !important;
}
.under-thumb {
  border-bottom: 1px solid #c3c3c3;
  margin-bottom: 25px;
  margin-top: 0px;
  padding: 0 8px;
}
.author-info
{
  border: none !important;
}
.entry-header > .links > a, .entry-header > .links{
  color: #f8846d;
  margin-bottom: 8px;
  display: inline-block;
  font-size: 13px;
}
.accordion {
  margin: 10px 0px;
}
.entry-header h1
{
  color: black;
}
span.focus {
  background-color: #333;
  color: white;
  padding: 3px 5px;
}
div#tldr {
  margin-top: 25px;
}
.author-avatar .avatar {
  border: 2px solid #f65636;
}
div#tldr h3 {
  font-size: 18px;
}
.post-cont h3 {
  font-size: 26px;
  margin: 30px 0px;
}
.post-cont h4 {
  font-size: 22px;
  margin: 30px 0px;
}

#tldr div {background-color: #f1f1f2;padding: 25px;margin-top: 12px;}
p.author-title {margin-bottom: 0px;margin-top: 10px;float: left;    color: #353535;}

.author-avatar {
    margin-top: -13px;
}
span#tldrBanner > a {
  color: black;
}
.title-right {
  color: #333;
  font-size: 17px;
}
.post-navigation
{
  margin-right: 3% !important;
  margin-left: 3% !important;
  margin-bottom: 0px;
}

.navigation{
      margin-top: 45px;
}

div#comments {
  width: 99.98%;
  margin: 0px;
  left: 0px;
  position: absolute;
  display: inline-block;
  padding: 20px 10%;
  background-color: #f1f1f2;
}
/* ... */

